--- a/InfiniteRecharge.yaml
+++ b/InfiniteRecharge.yaml
@@ -90,7 +90,7 @@ Children:
           default: '2'
           name: CAN ID
           validators: &id003 [CANID]
-          value: '3'
+          value: '7'
       Base: Talon SRX
       Name: ClimbLiftMotor
     Properties:
@@ -118,17 +118,7 @@ Children:
           default: '2'
           name: CAN ID
           validators: *id003
-          value: '0'
-      Base: Talon SRX
-      Name: AcquisitionLeftMotor
-    - Children: []
-      Properties:
-        CAN ID: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id002
-          default: '2'
-          name: CAN ID
-          validators: *id003
-          value: '1'
+          value: '4'
       Base: Talon SRX
       Name: AcquisitionRightMotor
     Properties:
@@ -163,31 +153,31 @@ Children:
         default: []
         name: Constants
         validators: null
-        value: &id006 []
+        value: &id004 []
     Base: Subsystem
     Name: Conveyer
   - Children:
     - Children: []
       Properties:
         CAN ID: !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id004 ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '10',
-            '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22',
-            '23', '24', '25', '26', '27', '28', '29', '30', '31']
+          choices: ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11',
+            '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22', '23',
+            '24', '25', '26', '27', '28', '29', '30', '31']
           default: '2'
           name: CAN ID
-          validators: &id005 [CANID]
-          value: '27'
+          validators: [CANID]
+          value: '11'
       Base: Victor SPX
       Name: PanelArmMotor
     - Children: []
       Properties:
         CAN ID: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id004
+          choices: *id002
           default: '2'
           name: CAN ID
-          validators: *id005
-          value: '4'
-      Base: Victor SPX
+          validators: *id003
+          value: '10'
+      Base: Talon SRX
       Name: PanelSpinMotor
     Properties:
       Send to SmartDashboard: !!robotbuilder.data.properties.BooleanProperty {default: false,
@@ -203,7 +193,7 @@ Children:
         default: []
         name: Constants
         validators: null
-        value: *id006
+        value: *id004
     Base: Subsystem
     Name: Panel
   Properties: {}
@@ -221,21 +211,21 @@ Children:
           validators: null
           value: []
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id007 ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11',
+          choices: &id005 ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11',
             '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22', '23',
             '24', '25', '26', '27', '28', '29', '30', '31', '32']
           default: '1'
           name: Button
           validators: null
-          value: '1'
+          value: '6'
         Command: !!robotbuilder.data.properties.TypeSelectionProperty
           default: None
           name: Command
           type: Command
-          validators: &id008 [TypeDropdownSelected]
+          validators: &id006 [TypeDropdownSelected]
           value: AcquisitionConveyerMotorOn
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id009 [whileHeld, whenPressed, whenReleased]
+          choices: &id007 [whileHeld, whenPressed, whenReleased]
           default: whileHeld
           name: When to Run
           validators: null
@@ -252,19 +242,19 @@ Children:
           validators: null
           value: []
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id007
+          choices: *id005
           default: '1'
           name: Button
           validators: null
-          value: '1'
+          value: '5'
         Command: !!robotbuilder.data.properties.TypeSelectionProperty
           default: None
           name: Command
           type: Command
-          validators: *id008
+          validators: *id006
           value: ConveyerReverseCommand
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id009
+          choices: *id007
           default: whileHeld
           name: When to Run
           validators: null
@@ -273,10 +263,10 @@ Children:
       Name: AcquisitionConveyerRButton
     Properties:
       Number: !!robotbuilder.data.properties.ChoicesProperty
-        choices: &id010 ['0', '1', '2', '3', '4', '5']
+        choices: &id008 ['0', '1', '2', '3', '4', '5']
         default: 1
         name: Number
-        validators: &id011 [Joystick]
+        validators: &id009 [Joystick]
         value: '0'
     Base: Joystick
     Name: DriverController
@@ -291,19 +281,19 @@ Children:
           validators: null
           value: []
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id007
+          choices: *id005
           default: '1'
           name: Button
           validators: null
-          value: '1'
+          value: '4'
         Command: !!robotbuilder.data.properties.TypeSelectionProperty
           default: None
           name: Command
           type: Command
-          validators: *id008
+          validators: *id006
           value: CameraServoUpCommand
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id009
+          choices: *id007
           default: whileHeld
           name: When to Run
           validators: null
@@ -320,19 +310,19 @@ Children:
           validators: null
           value: []
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id007
+          choices: *id005
           default: '1'
           name: Button
           validators: null
-          value: '2'
+          value: '3'
         Command: !!robotbuilder.data.properties.TypeSelectionProperty
           default: None
           name: Command
           type: Command
-          validators: *id008
+          validators: *id006
           value: CameraServoDownCommand
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id009
+          choices: *id007
           default: whileHeld
           name: When to Run
           validators: null
@@ -349,19 +339,19 @@ Children:
           validators: null
           value: []
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id007
+          choices: *id005
           default: '1'
           name: Button
           validators: null
-          value: '4'
+          value: '6'
         Command: !!robotbuilder.data.properties.TypeSelectionProperty
           default: None
           name: Command
           type: Command
-          validators: *id008
+          validators: *id006
           value: ShooterOnCommand
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id009
+          choices: *id007
           default: whileHeld
           name: When to Run
           validators: null
@@ -378,19 +368,19 @@ Children:
           validators: null
           value: []
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id007
+          choices: *id005
           default: '1'
           name: Button
           validators: null
-          value: '5'
+          value: '8'
         Command: !!robotbuilder.data.properties.TypeSelectionProperty
           default: None
           name: Command
           type: Command
-          validators: *id008
+          validators: *id006
           value: AcquisitionOnCommand
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id009
+          choices: *id007
           default: whileHeld
           name: When to Run
           validators: null
@@ -407,19 +397,19 @@ Children:
           validators: null
           value: []
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id007
+          choices: *id005
           default: '1'
           name: Button
           validators: null
-          value: '1'
+          value: '2'
         Command: !!robotbuilder.data.properties.TypeSelectionProperty
           default: None
           name: Command
           type: Command
-          validators: *id008
+          validators: *id006
           value: ClimbOpenLockCommand
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id009
+          choices: *id007
           default: whileHeld
           name: When to Run
           validators: null
@@ -436,7 +426,7 @@ Children:
           validators: null
           value: []
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id007
+          choices: *id005
           default: '1'
           name: Button
           validators: null
@@ -445,10 +435,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id008
+          validators: *id006
           value: ClimbCloseLockCommand
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id009
+          choices: *id007
           default: whileHeld
           name: When to Run
           validators: null
@@ -465,19 +455,19 @@ Children:
           validators: null
           value: []
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id007
+          choices: *id005
           default: '1'
           name: Button
           validators: null
-          value: '1'
+          value: '7'
         Command: !!robotbuilder.data.properties.TypeSelectionProperty
           default: None
           name: Command
           type: Command
-          validators: *id008
+          validators: *id006
           value: AcquisitionReverseCommand
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id009
+          choices: *id007
           default: whileHeld
           name: When to Run
           validators: null
@@ -494,19 +484,19 @@ Children:
           validators: null
           value: []
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id007
+          choices: *id005
           default: '1'
           name: Button
           validators: null
-          value: '1'
+          value: '5'
         Command: !!robotbuilder.data.properties.TypeSelectionProperty
           default: None
           name: Command
           type: Command
-          validators: *id008
+          validators: *id006
           value: ShooterReverseCommand
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id009
+          choices: *id007
           default: whileHeld
           name: When to Run
           validators: null
@@ -515,10 +505,10 @@ Children:
       Name: ShooterRButton
     Properties:
       Number: !!robotbuilder.data.properties.ChoicesProperty
-        choices: *id010
+        choices: *id008
         default: 1
         name: Number
-        validators: *id011
+        validators: *id009
         value: '1'
     Base: Joystick
     Name: OperatorController
